# comfyui-studiodeep

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
data/text-to-video-prompt/: prompt-reference.md
nodes/: __init__.py  llm_backend.py  n8n_backend.py  t2v_prompt_builder.py
